--- a/ChatApp.Api/appsettings.json
+++ b/ChatApp.Api/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=ChatAppDb;Trusted_Connection=True;Encrypt=False;"
   },
-  "AllowedHosts": "*"
+  "JWT": {
+    "Secret": "bXlTYXBlckRlZkF1dGhUb2tlbk5ldHdvcmtHZW5lcmF0ZWQ=",
+    "ValidIssuer": "ChatApp",
+    "ValidAudience": "ChatAppUsers"
+  }
 }
